@@ -113,5 +113,5 @@
     "pdf"
   ],
   "test-depends" : [ ],
-  "version" : "0.1.8"
+  "version" : "0.1.9"
 }
